tests/baselines/reference/typeTagOnFunctionDeclaration.errors.txt
index.js(15,1): error TS2322: Type 'number' is not assignable to type 'string'.


==== index.js (1 errors) ====
    /**
     * @type {{(arg1: string): string;}}
    */
    function fn(arg1) {
        return arg1;
    }
    
    /**
     * @type {{(arg1: string): string; bar: string}}
    */
    function fn2(arg1) {
        return arg1;
    }
    
    fn2.bar = 42; // error
    ~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.